# whatsapp-client

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
src/whatsapp_client/: __init__.py  _client.py  _exceptions.py  _types.py
src/whatsapp_client/_webhook/: __init__.py  _types.py
tests/: conftest.py  test_client.py  test_errors.py  test_groups.py  test_interactive.py  test_location.py  test_media.py  test_readme.py  test_template.py  test_text.py  test_webhook.py
tests/cassettes/test_client/: test_invalid_token.yaml  test_send_audio.yaml  test_send_location.yaml  test_send_sticker.yaml  test_send_template.yaml  test_send_video.yaml
tests/cassettes/test_errors/: test_invalid_phone.yaml
tests/cassettes/test_interactive/: test_send_buttons.yaml  test_send_list.yaml
tests/cassettes/test_media/: test_send_document.yaml  test_send_image.yaml
tests/cassettes/test_text/: test_send_text.yaml
