[project]
name = "whatsapp-client"
dynamic = ["version"]
description = "Async Python client for the WhatsApp Business Cloud API"
readme = "README.md"
authors = [
    { name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.28"]

[dependency-groups]
test = ["pytest>=8", "pytest-asyncio>=0.25", "pytest-recording>=0.13", "inline-snapshot>=0.31"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"
